added details link per flight

--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -23,7 +23,7 @@
         <option value="SJC">SJC</option>
     </select>
   </label><br>
-  <label>Flight Number
+  <label>Flight Number:
     <input type="number" name="flightNo">
   </label><br>
   <label>Departs:
