--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -10,16 +10,15 @@
     </tr>
   </thead>
   <tbody>
-    <!-- Write the line of EJS to iterate over movies using forEach -->
     <% flights.forEach(function(f) { %>
       <tr>
         <td><%= f.airline %></td>
         <td><%= f.airport %></td>
         <td><%= f.flightNo %></td>
         <td><%= f.departs %></td>
-        <!-- finish the ternary expression to display 'Yes' or 'Nope' -->
+        <td><a href="/flights/<%= f._id %>">Details</a></td>
       </tr>
-    <!-- Close the forEach using EJS here -->
+
     <% }); %>
   </tbody>
 </table>
