--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -1,14 +1,57 @@
 <%- include('../partials/header') %>
 
 <section id="show-page">
-    <div style="font-size: 20px;">Airline:</div>
-    <div><%= flight.airline %></div>
-    <div style="font-size: 20px;">Airport: </div>
-    <div><%= flight.airport %></div>
-    <div style="font-size: 20px;">Flight Number: </div>
-    <div><%= flight.flightNo %></div>
-    <div style="font-size: 20px;">Departure: </div>
-    <div><%= flight.departs %></div>
-    <div style="font-size: 20px;">Destination: </div>
-    <div><%= flight.destinations %></div>
+  <div style="font-size: 20px">Airline:</div>
+  <div><%= flight.airline %></div>
+  <div style="font-size: 20px">Airport:</div>
+  <div><%= flight.airport %></div>
+  <div style="font-size: 20px">Flight Number:</div>
+  <div><%= flight.flightNo %></div>
+  <div style="font-size: 20px">Departure:</div>
+  <div><%= flight.departs %></div>
+
 </section>
+
+<br /><br />
+<h2>Flight Destination</h2>
+<form action="/flights/<%= flight._id %>/destinations" method="POST">
+  <label>Destination:</label>
+  <select name="airport">
+    <option value="AUS">AUS</option>
+    <option value="DFW">DFW</option>
+    <option value="DEN">DEN</option>
+    <option value="LAX">LAX</option>
+    <option value="SAN">SAN</option>
+    <option value="SFO">SFO</option>
+    <option value="SJC">SJC</option>
+  </select>
+  <label>Arrival:</label>
+  <input type="datetime-local" name="arrival" />
+  <input type="submit" value="Add Destination" />
+</form>
+
+
+<% if (flight.destinations.length) { %>
+  <table>
+    <thead>
+      <tr>
+        <th>Airport</th>
+        <th>Arrival</th>
+
+      </tr>
+    </thead>
+    <tbody>
+      <% flight.destinations.forEach(function(f) { %>
+        <tr>
+          <!-- .toLocaleDateString() provides a more friendly date format -->
+          <td><%= f.airport %></td>
+          <td><%= f.arrival.toLocaleDateString() %></td>
+        </tr>
+      <% }); %>
+    </tbody>
+  </table>
+<% } else { %>
+  <h5>No Destinations Yet</h5>
+<% } %>
+
+<%- include('../partials/footer') %>
