--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -9,7 +9,8 @@
   <div><%= flight.flightNo %></div>
   <div style="font-size: 20px">Departure:</div>
   <div><%= flight.departs %></div>
-
+  <br />
+  <a href="/flights/<%= flight._id %>/tickets/new">Add Tickets</a>
 </section>
 
 <br /><br />
@@ -30,28 +31,26 @@
   <input type="submit" value="Add Destination" />
 </form>
 
-
 <% if (flight.destinations.length) { %>
-  <table>
-    <thead>
-      <tr>
-        <th>Airport</th>
-        <th>Arrival</th>
-
-      </tr>
-    </thead>
-    <tbody>
-      <% flight.destinations.forEach(function(f) { %>
-        <tr>
-          <!-- .toLocaleDateString() provides a more friendly date format -->
-          <td><%= f.airport %></td>
-          <td><%= f.arrival.toLocaleDateString() %></td>
-        </tr>
-      <% }); %>
-    </tbody>
-  </table>
+<table>
+  <thead>
+    <tr>
+      <th>Airport</th>
+      <th>Arrival Date</th>
+      <th>Time</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% flight.destinations.forEach(function(f) { %>
+    <tr>
+      <!-- .toLocaleDateString() provides a more friendly date format -->
+      <td><%= f.airport %></td>
+      <td><%= f.arrival.toLocaleDateString() %></td>
+      <td><%= f.arrival.toTimeString() %></td>
+    </tr>
+    <% }); %>
+  </tbody>
+</table>
 <% } else { %>
-  <h5>No Destinations Yet</h5>
-<% } %>
-
-<%- include('../partials/footer') %>
+<h5>No Destinations Yet</h5>
+<% } %> <%- include('../partials/footer') %>
